# pearson-correlation-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo_test.yml
src/: corrcoef_f32.rs  corrcoef_f64.rs  lib.rs
